OrderService/k8s/orderservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: orderservice
          image: orderservice-orderservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8001   # <-- changed from 8000 to 8001
          resources:               # <-- added this block
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: orderservice
spec:
  type: NodePort
  selector:
    app: orderservice
  ports:
    - port: 8001          # <-- changed from 8000
      targetPort: 8001
      nodePort: 30081     # http://localhost:8001
